# Tubbly.CSPR

./: CHANGELOG.md  Cargo.toml  Odra.toml  README.md
resources/casper_contract_schemas/: tubbly_schema.json
resources/legacy/: tubbly_schema.json
scripts/: .gitignore  Tubbly.wasm  confirm-casper-test.sh  deploy-casper-test.sh  init-casper-test.sh  query.sh  submit-casper-test.sh
src/: lib.rs  tubbly.rs
