[package]
name = "tubbly"
version = "0.2.0"
edition = "2021"

[dependencies]
odra = { version = "1.0.0", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "1.0.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "1.0.0", features = [], default-features = false }

[[bin]]
name = "tubbly_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "tubbly_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
